# visa

./: CHANGELOG.md  readme.md  visa.cabal
docs/: development.md
examples/: create-session.hs  list-resources.hs  open-device.hs
src/: Visa.hs
src/Visa/: Attributes.hs  Dll.hs  Resources.hs  Session.hs  Status.hs
src/Visa/Dll/: Visa.hs
tests/: Main.hs  TestSession.hs
