cabal-version:      2.4
name:               visa
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Richard Hoberecht
maintainer:         richard.hoberecht@infineon.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Visa.Resources
                      Visa.Status
                      Visa.Attributes
                      Visa.Dll.Visa

    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.4.0,
                      bytestring ^>= 0.11.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
    extra-libraries:  visa32
    extra-lib-dirs:   "C:/Program Files/IVI Foundation/VISA/Win64/Lib_x64/msc"
    include-dirs:     "C:/Program Files/IVI Foundation/VISA/Win64/Include"

test-suite test-visa
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    cpp-options:      -DTEST
    build-depends:    base ^>=4.16.4.0,
                      bytestring ^>= 0.11.4.0,
                      visa

    hs-source-dirs:   tests, src
    other-modules:    Visa.Resources Visa.Status Visa.Dll.Visa
    default-language: Haskell2010


executable create-session
    main-is:          create-session.hs
    build-depends:
        base ^>= 4.16.4.0,
        visa
    hs-source-dirs:   examples
    default-language: Haskell2010

executable list-resources
    main-is:          list-resources.hs
    build-depends:
        base ^>= 4.16.4.0,
        visa
    hs-source-dirs:   examples
    default-language: Haskell2010

executable open-device
    main-is:          open-device.hs
    build-depends:
        base ^>= 4.16.4.0,
        visa
    hs-source-dirs:   examples
    default-language: Haskell2010
